<resources>
    <string name="app_name">SomniumApp</string>
    <string name="Discord">Дискорд</string>
    <string name="DynMap">Карта сервера</string>
    <string name="VK">Группа Вконтакте</string>
    <string name="ServerSpawn">Спавн сервера</string>
    <string name="Articles">Статьи</string>
    <string name="Home">Главная</string>
    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="FAQ">FAQ</string>
    <string name="Gameplay">Геймплей</string>
    <string name="Economy">Экономика (в разработке)</string>
    <string name="Donate">Донат</string>
    <string name="Other">Другое</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>